Bug 164299 - Pasting from Calc to Impress in HTML format crashes LO
Summary: Pasting from Calc to Impress in HTML format crashes LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Paste
  Show dependency treegraph
 
Reported: 2024-12-12 12:18 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-26 15:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-12-12 12:18:12 UTC
1. Open a new Calc document, type aaa into A1
2. Copy A1
3. Open a new Impress document, go to the placholder
4. Click the Paste dropdown button and select the HTML format
-> crash

Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ec4415d2a78b1c0fb5eab5baea88508d6b9db43b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Seems to have started in:

https://git.libreoffice.org/core/+/6a36c75fae892edcfd058abf9fd075216573c330%5E%21

Author	Oliver Specht <oliver.specht@cib.de>	Thu Feb 01 11:06:02 2024 +0100
committer	Thorsten Behrens <thorsten.behrens@allotropia.de>	Fri Jun 14 11:18:38 2024 +0200
tree b28d6ab72f09054b0a92cb518c12671491ecf323
parent 0e33dff4252f3124c7ecc591befa56f0fb0e1895 [diff]

prefer simple HTML format over RTF while pasting clipboard content
Comment 1 Gabor Kelemen (Collabora) 2024-12-12 12:18:54 UTC
Adding CC to: Oliver Specht
Comment 2 Commit Notification 2024-12-16 10:25:39 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/728f5eb01de33bd1f16f25d9bd7cdef6fa0909de

tdf#164299 fix crash in pasting HTML table

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-12-17 13:14:23 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/f4037d5fcd94ad3d4ba78637e6130aef6c4fbe77

tdf#164299 fix crash in pasting HTML table

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-02-26 15:07:01 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/26773186b57e5b8a4338294f0d3f858144d5a8dc

tdf#164299: sd: Add UItest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.