tdf#164299 fix crash in pasting HTML table

Supports <colgroup> element now.

Change-Id: I4fe49f3c79c567e9364a1642e716846256c6070b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178536
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
(cherry picked from commit 728f5eb01de33bd1f16f25d9bd7cdef6fa0909de)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178568
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: allotropia jenkins <jenkins@allotropia.de>